Adicionadas mais partes do Home

--- a/site/index.html
+++ b/site/index.html
@@ -63,5 +63,27 @@
                 </div>
             </div>
         </div>
+        <div class="diferencas">
+            <img src="img/fundoPreto.png" alt="fundo" class="fundo">
+            <h2>Diferença entre...</h2>
+            <div class="banner4">
+                <img src="img/Banner4.png" alt="banner">
+            </div>
+            <div class="banner5">
+                <img src="img/Banner5.png" alt="banner">
+            </div>
+            <div class="banner6">
+                <img src="img/Banner6.png" alt="banner">
+            </div>
+        </div>
+        <div class="surgimento">
+            <h2>Surgimento</h2>
+            <p>O termo possui origem inglesa. <b>‘Letter’ = letra</b> e <b>‘ing’ com um signficado de ação.</b> A origem está atrelada à criação de logotipos de marcas. <br><br>
+
+            Não há uma data específica em que houve o seu surgimento dessa técnica, porém, desde a antiguidade, o aspecto visual dessa escrita tem sido modificado de inúmeras formas, com o objetivo de <b>expressar emoções e conceitos que vão muito além das palavras em si.</b> <br><br>
+
+            Desse modo, podemos considerar que ele acabou surgindo quando as pessoas começaram a valorizar mais os trabalhos realizados à mão. Transmitindo, assim, um caráter e um sentimento mais humanizado para as pessoas. Portanto, <b>a “imperfeição” dessa prática passou a ser cada vez mais procurada,</b> pois é considerada uma arte mais espontânea.</p>
+        </div>
     </body>
+
 </html>
