Adicionada página de materiais

--- a/site/index.html
+++ b/site/index.html
@@ -78,28 +78,36 @@
         </div>
         <div class="surgimento">
             <h2>Surgimento</h2>
-            <p>O termo possui origem inglesa. <b>‘Letter’ = letra</b> e <b>‘ing’ com um signficado de ação.</b> A origem está atrelada à criação de logotipos de marcas. <br><br>
+            <p>O termo possui origem inglesa. <b>‘Letter’ = letra</b> e <b>‘ing’ com um signficado de ação.</b> A origem
+                está atrelada à criação de logotipos de marcas. <br><br>
 
-            Não há uma data específica em que houve o seu surgimento dessa técnica, porém, desde a antiguidade, o aspecto visual dessa escrita tem sido modificado de inúmeras formas, com o objetivo de <b>expressar emoções e conceitos que vão muito além das palavras em si.</b> <br><br>
+                Não há uma data específica em que houve o seu surgimento dessa técnica, porém, desde a antiguidade, o
+                aspecto visual dessa escrita tem sido modificado de inúmeras formas, com o objetivo de <b>expressar
+                    emoções e conceitos que vão muito além das palavras em si.</b> <br><br>
 
-            Desse modo, podemos considerar que ele acabou surgindo quando as pessoas começaram a valorizar mais os trabalhos realizados à mão. Transmitindo, assim, um caráter e um sentimento mais humanizado para as pessoas. Portanto, <b>a “imperfeição” dessa prática passou a ser cada vez mais procurada,</b> pois é considerada uma arte mais espontânea.</p>
+                Desse modo, podemos considerar que ele acabou surgindo quando as pessoas começaram a valorizar mais os
+                trabalhos realizados à mão. Transmitindo, assim, um caráter e um sentimento mais humanizado para as
+                pessoas. Portanto, <b>a “imperfeição” dessa prática passou a ser cada vez mais procurada,</b> pois é
+                considerada uma arte mais espontânea.</p>
         </div>
         <div class="beneficios">
             <img src="img/fundoPreto.png" alt="fundo" class="fundo">
             <h2>Benefícios</h2>
             <div class="conteudo">
                 <div class="caixa">
-                   <div id="tela1" style="display: block;">
+                    <div id="tela1" style="display: block;">
                         <h3>Aumento da<br> criatividade</h3>
                         <div class="botao">
                             <button onclick="criatividade()">+</button>
                         </div>
-                   </div>
-                   <div id="tela2"style="display: none;">
-                        <p>A técnica oferece uma enorme oportunidade para desenvolver a critividade e a imaginação. Além do mais, é uma forma de se expressar, então, as pessoas podem usar esse método para comunicarem suas emoções e sentimentos.</p>
+                    </div>
+                    <div id="tela2" style="display: none;">
+                        <p>A técnica oferece uma enorme oportunidade para desenvolver a critividade e a imaginação. Além
+                            do mais, é uma forma de se expressar, então, as pessoas podem usar esse método para
+                            comunicarem suas emoções e sentimentos.</p>
                         <button onclick="voltarCriatividade()">-</button>
-                   </div>
-                   
+                    </div>
+
                 </div>
                 <div class="caixa">
                     <div id="tela3">
@@ -109,7 +117,9 @@
                         </div>
                     </div>
                     <div id="tela4" style="display: none;">
-                        <p>Como o lettering é considerado algo ‘complexo’, isso exige concentração, tempo e treino. Assim, estimulando a escolha de cores, jeitos e maneiras de fazer a arte, os materiais etc, focando em uma atividade.</p>
+                        <p>Como o lettering é considerado algo ‘complexo’, isso exige concentração, tempo e treino.
+                            Assim, estimulando a escolha de cores, jeitos e maneiras de fazer a arte, os materiais etc,
+                            focando em uma atividade.</p>
                         <button onclick="voltarConcentracao()">-</button>
                     </div>
                 </div>
@@ -120,8 +130,10 @@
                             <button onclick="melhora()">+</button>
                         </div>
                     </div>
-                    <div id="tela6"  style="display: none;">
-                        <p>De certa forma, o raciocínio lógico é ligado à concentração. Dessa maneira, manter o foco nessa técnica, em longo prazo, acaba facilitando o desenvolvimento de outras atividades, como memorização e cálculos matemáticos.</p>
+                    <div id="tela6" style="display: none;">
+                        <p>De certa forma, o raciocínio lógico é ligado à concentração. Dessa maneira, manter o foco
+                            nessa técnica, em longo prazo, acaba facilitando o desenvolvimento de outras atividades,
+                            como memorização e cálculos matemáticos.</p>
                         <button onclick="voltarMelhora()">-</button>
                     </div>
                 </div>
@@ -129,6 +141,35 @@
             <div class="info">
                 Clique em ‘+’ para saber mais informações sobre o benefício.
             </div>
+        </div>
+        <div class="materiais">
+            <div class="conteudo">
+                <h2>Materiais necessários</h2>
+                <p>Muitas pessoas acham que não podem fazer lettering pois os materiais são caros, porém, ele pode ser
+                    feito com materiais muito acessíveis!</p>
+            </div>
+            <div class="caixas">
+                <details>
+                    <summary>Itens essenciais</summary>
+                    <div class="caixinha">
+                        <img src="img/lapis.png" alt="Lápis">
+                        <p>Lápis, borracha, régua e papel</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Outros</summary>
+                    <div class="caixinha">
+                        <img src="img/lapis.png" alt="Lápis">
+                        <p>Caneta (sim, pode ser uma esferográfica- BIC), canetinhas hidrográficas, marcadores, brush pens, lápis de cor...</p>
+                    </details>
+                    </div>
+                </div>
+            <div class="conclusao">
+                <p>Ficou interessado(a) nessa arte? Fazendo o seu cadastro no site, você terá acesso a diversos letterings para se inspirar, tendo um melhor entendimento dos lugares em que ele está presente!
+                <br><br>
+                Além disso, você pode fazer um <b>pedido personalizado</b>... Não perca essa chance!! </p>
+            </div>
+
         </div>
     </body>
 
@@ -164,4 +205,7 @@
         tela5.style.display = 'block';
         tela6.style.display = 'none';
     }
+
+
+
 </script>
