--- a/site/index.html
+++ b/site/index.html
@@ -8,16 +8,18 @@
         <title>Unique Style</title>
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="footer.css">
+        <link rel="icon" href="img/logoUS.png">
     </head>
 
     <body>
         <div class="header">
             <div class="container">
-                <img src="img/Logo e nome.png" alt="Logo">
+                <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
                 <ul class="navBar">
-                    <li>Sobre Nós</li>
-                    <li>Simulação</li>
-                    <li>FAQs</li>
+                    <li><a href=""></a>Sobre Nós</li>
+                    <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="">FAQs</a></li>
                 </ul>
                 <div class="botoes">
                     <button id="botaoLogin">Login</button>
@@ -162,14 +164,34 @@
                         <img src="img/lapis.png" alt="Lápis">
                         <p>Caneta (sim, pode ser uma esferográfica- BIC), canetinhas hidrográficas, marcadores, brush pens, lápis de cor...</p>
                     </details>
-                    </div>
                 </div>
-            <div class="conclusao">
+        </div>
+        <div class="conclusao">
                 <p>Ficou interessado(a) nessa arte? Fazendo o seu cadastro no site, você terá acesso a diversos letterings para se inspirar, tendo um melhor entendimento dos lugares em que ele está presente!
                 <br><br>
                 Além disso, você pode fazer um <b>pedido personalizado</b>... Não perca essa chance!! </p>
+        </div>
+        <div class="footer">
+            <div class="footerConteudo">
+                <ul class="marca">
+                    <li><img src="img/logoUS.png" alt="Logo"></li>
+                    <li><p>© Copyright, todos os direitos reservados</p></li>
+                </ul>
+                <ul class="contato">
+                    <li><i>E-mail</i></li>
+                    <li><p>sofhiautaka@gmail.com</p></li>
+                </ul>
+                <ul class="cards">
+                    <li><img src="img/whats.png" alt="WhatsApp"></li>
+                    <li><img src="img/insta.png" alt="Instagram"></li>
+                    <li><img src="img/linkedin.png" alt="Linkedin"></li>
+                </ul>
+                <ul class="links">
+                    <li>Sobre Nós</li>
+                    <li>Simulação</li>
+                    <li>FAQs</li>
+                </ul>
             </div>
-
         </div>
     </body>
 
