--- a/site/login.html
+++ b/site/login.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unique Style</title>
-    <link rel="icon" href="img/logoUS.png">
     <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="simulacao.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="footer.css">
-</head>
 
+</head>
 <body>
     <div class="header" style="z-index: 100;">
         <div class="container">
@@ -23,43 +20,37 @@
                 <li><a href="">FAQs</a></li>
             </ul>
             <div class="botoes">
-                <button id="botaoLogin" onclick="login()">Login</button>
+                <button style="background-color: rgb(106, 106, 106, 27%);" id="botaoLogin" onclick="login()">Login</button>
                 <button id="botaoCadastro" onclick="cadastro()">Cadastre-se</button>
             </div>
         </div>
     </div>
     <div class="conteudo">
-
-        <div class="tituloSimulacao">
-            <h2>Digite uma palavra ou frase e veja como ela ficará em lettering:</h2>
+        <div class="caixa">
+            <div class="titulo">
+                <h3>LOGIN</h3>
+            </div>
+            <div class="campos">
+            <input id="email" placeholder="e-mail">
+            <input type="password" id="senha" placeholder="senha">
         </div>
-        <div id="lapis">
-            <img src="img/lapisIcon.svg" alt="Lápis" style="width: 30px;">
+        <a href="cadastro.html">Não possuo uma conta</a>
+        <button onclick="entrar()">Entrar</button>
+        <div class="imagem">
+            <img src="img/caixaLoginCadastro.png" alt="Login">
         </div>
-
-        <div id="lettering">
-            <p style="margin-top: 30%;">O seu lettering aparecerá aqui!</p>
-        </div>
-        <div class="caixaSimulacao">
-            <textarea id="txtArea" maxlength="60" placeholder="Digite aqui..."></textarea>
-            <button onclick="simular()" id="botaoSimulacao">Simular</button>
-        </div>
-
+    </div>
 
     </div>
     <div class="footer">
         <div class="footerConteudo">
             <ul class="marca">
                 <li><img src="img/logoUS.png" alt="Logo"></li>
-                <li>
-                    <p>© Copyright, todos os direitos reservados</p>
-                </li>
+                <li><p>© Copyright, todos os direitos reservados</p></li>
             </ul>
             <ul class="contato">
                 <li><i>E-mail</i></li>
-                <li>
-                    <p>sofhiautaka@gmail.com</p>
-                </li>
+                <li><p>sofhiautaka@gmail.com</p></li>
             </ul>
             <ul class="cards">
                 <li><img src="img/whats.png" alt="WhatsApp"></li>
@@ -71,30 +62,13 @@
                 <li>Simulação</li>
                 <li>FAQs</li>
             </ul>
-           
         </div>
     </div>
+   
 </body>
-
 </html>
 
 <script>
-    function simular() {
-        var click = 0
-        var txt = txtArea.value;
-        txtArea.value = '';
-
-        if (txt.length > 20) {
-            lettering.innerHTML = '<p style="margin-top: 20%; color: #151515;"> ' + txt + '</p>' 
-        } else if (txt.length <= 10) {
-            lettering.innerHTML = '<p style="margin-top: 45%; color: #151515;">' + txt + '</p>' 
-        } else if (txt.length > 10){
-            lettering.innerHTML = '<p style="margin-top: 45%; color: #151515;"> ' + txt + '</p>'
-        }
-
-    
-    }
-
     function login() {
         window.location.href = "login.html";
     }
