--- a/site/index.html
+++ b/site/index.html
@@ -6,18 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Unique Style</title>
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/footer.css">
         <link rel="icon" href="img/logoUS.png">
     </head>
 
     <body>
-        <div class="header">
+        <div class="header" style="z-index: 100;">
             <div class="container">
                 <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
                 <ul class="navBar">
-                    <li><a href="">Sobre Mim</a></li>
+                    <li><a href="#sobreMim">Sobre Mim</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
                     <li><a href="">FAQs</a></li>
                 </ul>
@@ -171,6 +171,19 @@
                 <br><br>
                 Além disso, você pode fazer um <b>pedido personalizado</b>... Não perca essa chance!! </p>
         </div>
+        <div id="sobreMim">
+            <h2>Sobre Mim</h2>
+            <div class="eu">
+                <img src="img/minhaFt.png" alt="Sofhia Utaka">
+                <p>Sofhia Utaka</p>
+                <p>18 anos</p>
+            </div>
+            <div class="explicacao">     
+                <p>Sempre gostei de organizar meus estudos de alguma forma (tanto o conteúdo em si quanto o planejamento), e ao longo do tempo percebi que o lettering me ajudava nisso.
+                Desse modo, decidi contar um pouquinho dele aqui para vocês e mostrar como ele pode ser aplicado no seu dia a dia!</p>
+            </div>
+            <img id="imgFundo" src="img/Sobre Mim.png" alt="Fundo do Sobre Mim">
+        </div>
         <div class="footer">
             <div class="footerConteudo">
                 <ul class="marca">
@@ -193,6 +206,7 @@
                 </ul>
             </div>
         </div>
+       
     </body>
 
 </html>
