--- a/site/simulacao.html
+++ b/site/simulacao.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
             <ul class="navBar">
-                <li><a href="">Sobre Mim</a></li>
+                <li><a href="index.html#sobreMim">Sobre Mim</a></li>
                 <li><a href="simulacao.html">Simulação</a></li>
                 <li><a href="">FAQs</a></li>
             </ul>
