--- a/site/login.html
+++ b/site/login.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
             <ul class="navBar">
-                <li><a href="">Sobre Mim</a></li>
+                <li><a href="index.html#sobreMim">Sobre Mim</a></li>
                 <li><a href="simulacao.html">Simulação</a></li>
                 <li><a href="">FAQs</a></li>
             </ul>
@@ -75,5 +75,9 @@
 
     function cadastro() {
         window.location.href = "cadastro.html";
+    }
+
+    function entrar() {
+        window.location.href = "paginaUsuario.html";
     }
 </script>
