Iniciada tela de FAQ

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -19,7 +19,7 @@
                 <ul class="navBar">
                     <li><a href="index.html#sobreMim">Sobre Mim</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
-                    <li><a href="">FAQs</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                 </ul>
                 <div class="botoes">
                     <button id="botaoLogin" onclick="login()">Login</button>
