--- a/site/public/login.html
+++ b/site/public/login.html
@@ -17,7 +17,7 @@
             <ul class="navBar">
                 <li><a href="index.html#sobreMim">Sobre Mim</a></li>
                 <li><a href="simulacao.html">Simulação</a></li>
-                <li><a href="">FAQs</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
             <div class="botoes">
                 <button style="background-color: rgb(106, 106, 106, 27%);" id="botaoLogin" onclick="login()">Login</button>
