--- a/site/public/faq.html
+++ b/site/public/faq.html
@@ -15,8 +15,8 @@
             <div class="container">
                 <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
                 <ul class="navBar">
-                    <li><a href="#sobreMim">Sobre Mim</a></li>
-                    <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="index.html#sobreMim">Sobre Mim</a></li>
+                    <li><a href="index.html#beneficios">Benefícios</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
                 <div class="botoes">
@@ -32,37 +32,37 @@
                     <details>
                         <summary>Como posso fazer um pedido personalizado com lettering?</summary>
                         <div class="conteudo">
-                            <p>Bla bla bla</p>
+                            <p>Faça o seu login - faça o seu cadastro caso não tenha uma conta - ao se logar, irá aparecer o botão para fazer um pedido personalizado direcionando para o nosso WhatsApp!❤️</p>
                         </div>
                     </details>
                     <details>
                         <summary>O lettering só pode ser feito com brush pen?</summary>
                         <div class="conteudo">
-                            <p>Bla bla bla</p>
+                            <p>Ele pode ser feito com canetas, canetinhas, marcadores etc. Saiba mais sobre os materiais necessários na página inicial do site.</p>
                         </div>
                     </details>
                     <details>
                         <summary>Onde posso ver aplicações do lettering no dia a dia?</summary>
                         <div class="conteudo">
-                            <p>Bla bla bla</p>
+                            <p>Faça o seu cadastro no site, após logar a sua conta, aparecerão posts mostrando diversas aplicações do lettering.</p>
                         </div>
                     </details>
                     <details>
                         <summary>Como posso aprender a fazer esse tipo de arte?</summary>
                         <div class="conteudo">
-                            <p>Bla bla bla</p>
+                            <p>Pesquise por vídeos no YouTube, e lembre-se que é um processo contínuo de treino. Não desista, quanto mais praticar, melhor ficará!</p>
                         </div>
                     </details>
                     <details>
                         <summary>Não estou conseguindo fazer o meu login, o que fazer?</summary>
                         <div class="conteudo">
-                            <p>Bla bla bla</p>
+                            <p>Você já possui um cadastro? Caso não, crie um e depois entre na sua conta.</p>
                         </div>
                     </details>
                     <details>
                         <summary>Como posso simular uma frase/ palavra em lettering?</summary>
                         <div class="conteudo">
-                            <p>Bla bla bla</p>
+                            <p>Vá em 'simulação' aqui no menu do site e aproveite!</p>
                         </div>
                     </details>
                 
@@ -71,3 +71,13 @@
     </body>
 
 </html>
+
+<script>
+    function login() {
+        window.location.href = "login.html";
+    }
+
+    function cadastro() {
+        window.location.href = "cadastro.html";
+    }
+</script>
