--- a/site/public/index.html
+++ b/site/public/index.html
@@ -18,7 +18,7 @@
                 <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
                 <ul class="navBar">
                     <li><a href="#sobreMim">Sobre Mim</a></li>
-                    <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="#beneficios">Benefícios</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
                 <div class="botoes">
@@ -91,6 +91,7 @@
                 trabalhos realizados à mão. Transmitindo, assim, um caráter e um sentimento mais humanizado para as
                 pessoas. Portanto, <b>a “imperfeição” dessa prática passou a ser cada vez mais procurada,</b> pois é
                 considerada uma arte mais espontânea.</p>
+                <div id="beneficios"></div>
         </div>
         <div class="beneficios">
             <img src="img/fundoPreto.png" alt="fundo" class="fundo">
