--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -18,7 +18,7 @@
                 <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
                 <ul class="navBar">
                     <li><a href="index.html#sobreMim">Sobre Mim</a></li>
-                    <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="index.html#beneficios">Benefícios</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
                 <div class="botoes">
